feat(analytics): 캡션 주·썸네일 보조 속성 분석 전환 + 분류 어휘 DB화(V30)
- VisionPort→ContentAttributePort: 캡션 항상 입력, 썸네일은 게이트 on+생존 시만 첨부 —
  썸네일 만료 시에도 캡션으로 5종(광고·카테고리·브랜드·제품·유통사) 산출
- BeautyTaxonomy를 beauty_taxonomy·beauty_distributors(analysis DB, V30 시드) 스냅샷+로더로 전환 —
  프롬프트와 sanitize가 같은 원천 유지, 시드는 celfit-front 배포본 verbatim
- detected_products jsonb 신설([{name, brand}]), main_category CHECK는 Java sanitize로 이관
- analytics.vlm-enabled는 썸네일 첨부 게이트로 의미 변경 (기본 off — 캡션 5종은 항상 산출)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>